--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,9 @@ body {
 }
 
 header {
+  position: absolute;
+  width: 1600px;
+  height: 80px;
   background-color: #ffffff;
 }
 
@@ -19,11 +22,46 @@ header {
   line-height: 31px;
   color: #212121;
 }
-. .list {
+
+.list {
   list-style: none;
 }
 
+.link,
+.mail,
+.tell {
+  text-decoration: none;
+}
+
+.link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+  color: #212121;
+}
+
 .accent {
+  color: #2196f3;
+}
+
+.mail {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+}
+
+.tell {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+
+.link:hover {
+  text-decoration: underline;
   color: #2196f3;
 }
 
@@ -32,8 +70,52 @@ header {
   line-height: 16px;
 }
 
+.page-nav > a {
+  text-decoration: none;
+}
+
+.page-nav > a:hover {
+  text-decoration: underline;
+  color: #2196f3;
+}
+/*
+.page-nav > a:active {
+  color: #2196f3;
+}*/
+
+.nav-list > li {
+  text-decoration: none;
+}
+
 .hero {
-  background-color: #2f303a;
+  position: absolute;
+  width: 1600px;
+  height: 600px;
+  background: #2f303a;
+}
+
+.hero-title {
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 60px;
+  color: #ffffff;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+}
+
+.hero-button {
+  position: absolute;
+  width: 200px;
+  height: 50px;
+  background: #2196f3;
+}
+
+.hero-button-text {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 30px;
+  color: #ffffff;
 }
 
 .about {
