--- a/css/styles.css
+++ b/css/styles.css
@@ -337,7 +337,7 @@ header {
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
     text-decoration: none;
-    margin-top: 9px;
+    padding-top: 9px;
 }
 
 .footer-list-tell > a {
@@ -348,5 +348,89 @@ header {
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
     text-decoration: none;
-    margin-top: 9px;
+    padding-top: 9px;
+}
+
+.portfolio-main {
+    box-sizing: border-box;
+    width: 1445px;
+    margin: 0px 0px;
+    padding-left: 215px;
+}
+
+.nav {
+  padding-top: 100px;
+  padding-left: 280px;
+}
+
+.nav-button {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--title-text-color);
+    background-color: var(--bj-team);
+    border-radius: 4px;
+    border: none;
+}
+
+.nav-button-text{
+    padding: 6px 22px;
+}
+
+.nav-button:hover {
+    cursor: pointer;
+    color: var(--bj-color);
+    background-color: var(--accent-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+    0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.project-cards {
+    box-sizing: border-box;
+    width: 1170;
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 0;
+    padding-bottom: 94px;
+    display: flex;
+}
+
+.project-cards > li {
+    padding-right: 30px;
+    padding-bottom: 30px;
+}
+
+.project {
+    box-sizing: border-box;
+    width: 370px;
+    height: 404px;
+    border: 1px solid #EEEEEE;
+    background-color: var(--bj-color);
+    margin: 0;
+    
+}
+
+.project-photo {
+    margin: 0;
+}
+
+.project-name {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 36px;    
+    letter-spacing: 0.06em;
+    margin-left: 24px;
+    color: var(--title-text-color);
+}
+
+.project-about {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 30px;
+    letter-spacing: 0.03em;
+    color: var(--primary-text-color);
+    margin-left: 24px;
 }
