--- a/css/styles.css
+++ b/css/styles.css
@@ -363,8 +363,10 @@ header {
 }
 
 .nav {
-  padding-top: 100px;
+    margin: 0;
+  padding-top: 94px;
   padding-left: 280px;
+  padding-bottom: 50px;
 }
 
 .nav-button {
