--- a/css/styles.css
+++ b/css/styles.css
@@ -74,12 +74,12 @@ header {
     font-size: 14px;
     line-height:1.14;
     letter-spacing: 0.02em;
+    color: var(--primary-text-color);
 }
 
 .tell {
     margin-right: 215px;
     margin-left: 50px;
-    color: var(--primary-text-color);
 }
 
 .mail {
@@ -353,6 +353,13 @@ header {
     color: rgba(255, 255, 255, 0.6);
     text-decoration: none;
     padding-top: 9px;
+}
+
+.footer-list-mail > a:hover,
+.footer-list-tell > a:hover,
+.footer-list-mail > a:focus,
+.footer-list-tell > a:focus {
+    color: var(--accent-color);
 }
 
 .portfolio-main {
